--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'application'
 }
 
-group 'com.timojo.examples'
+group 'com.bhargrah.examples'
 version '0.1.0'
 
 sourceCompatibility = 1.8
@@ -31,9 +31,13 @@ dependencies {
     compile 'org.openjdk.jmh:jmh-core:1.21'
     compile 'org.openjdk.jmh:jmh-generator-annprocess:1.21'
 
+    //swagger
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 applicationDefaultJvmArgs = ["-XX:+UseG1GC"]
 
-mainClassName = 'com.timojo.energymart.App'
+mainClassName = 'com.bhargrah.energymart.App'
